# lv_port_pc_visual_studio_digital_room_signage

./: CMakeLists.txt  README.md
.github/workflows/: cmake-pipeline.yml
LvglWindowsSimulator/: LvglWindowsSimulator.cpp  LvglWindowsSimulator.vcxproj  LvglWindowsSimulator.vcxproj.filters  api.c  api.h  calendar_icon_light.c  config.c  config.h  events.h  locale.h  lv_conf.h  lv_font_my_montserrat_20.c  main.c  schedule_data.c  schedule_data.h  schedule_ui.c  schedule_ui.h  time_date_display.c  time_date_display.h
